--- a/BSiNS/Src/Components/com_Modal.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal.fx.yaml
@@ -6,7 +6,14 @@ com_Modal As CanvasComponent:
     IsNabavniNalog: =false
     LineId: ="Text"
     LotNo: =
-    LotNoPropVisible: =
+    LotNoPropVisible: |-
+        =/*IsEmpty(
+                Filter(
+                    lockedItems,
+                    ThisRecord.lineId = com_Modal.LineId
+                )
+            )*/
+        !LotNoPropVisibleCheck
     Quantity: =
     QuantityCompleted: =
     QuantityNewLOT: =
@@ -133,7 +140,14 @@ com_Modal As CanvasComponent:
                         RadiusBottomRight: =4
                         RadiusTopLeft: =4
                         RadiusTopRight: =4
-                        Visible: =((com_Modal.LotNoPropVisible && com_Modal.IsInventura) || com_Modal.IsNabavniNalog)
+                        Visible: |-
+                            =com_Modal.LotNoPropVisible
+                            /*IsEmpty(
+                                    Filter(
+                                        lockedItems,
+                                        ThisRecord.lineId = com_InvModal.LineId
+                                    )
+                                )*/
                         ZIndex: =1
 
                         TextCanvas3_12 As Text:
@@ -185,7 +199,7 @@ com_Modal As CanvasComponent:
                                 );*/
                             Placeholder: ="Unesite LOT"
                             Required: =true
-                            TriggerOutput: ="FocusOut"
+                            TriggerOutput: ='TextInputCanvas.TriggerOutput'.Keypress
                             Type: ="Text"
                             Value: =com_Modal.LotNo
                             Visible: =true
@@ -235,7 +249,7 @@ com_Modal As CanvasComponent:
                             OnChange: =If(inp_rezQty_2.ValidationState = inp_rezQty_2.ValidationState.Error, ErrorMsg.Text = "nesto");
                             Placeholder: ="Unesite rezervisano količinu"
                             Required: =true
-                            TriggerOutput: ="FocusOut"
+                            TriggerOutput: ='TextInputCanvas.TriggerOutput'.Keypress
                             Type: ="Text"
                             ValidationState: =If(!IsNumeric(inp_rezQty_2.Value) || Value(inp_rezQty_2.Value) < 0, "Error", "None")
                             Value: |-
@@ -321,7 +335,7 @@ com_Modal As CanvasComponent:
                             LayoutMinWidth: =320
                             OnChange: =false
                             Placeholder: ="Unesite potrebnu količinu"
-                            TriggerOutput: ="FocusOut"
+                            TriggerOutput: ='TextInputCanvas.TriggerOutput'.Keypress
                             ValidationState: =If(!IsNumeric(inp_potrebnoQty_2.Value) || Value(inp_potrebnoQty_2.Value) < 0, "Error", "None")
                             Value: =If(IsBlank(com_Modal.QuantityNewLOT),0,Abs(com_Modal.QuantityNewLOT))
                             Width: =200
