--- a/BSiNS/Src/Components/com_Modal.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal.fx.yaml
@@ -140,14 +140,7 @@ com_Modal As CanvasComponent:
                         RadiusBottomRight: =4
                         RadiusTopLeft: =4
                         RadiusTopRight: =4
-                        Visible: |-
-                            =com_Modal.LotNoPropVisible
-                            /*IsEmpty(
-                                    Filter(
-                                        lockedItems,
-                                        ThisRecord.lineId = com_InvModal.LineId
-                                    )
-                                )*/
+                        Visible: =com_Modal.LotNoPropVisible || com_Modal.IsNabavniNalog
                         ZIndex: =1
 
                         TextCanvas3_12 As Text:
