--- a/BSiNS/Src/scr_XMLNalogZaPrenos.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaPrenos.fx.yaml
@@ -351,6 +351,7 @@
 
     com_PreModal As com_Modal:
         LineId: =com_PreGalleries.SelectedLine.Line_No
+        LotNoPropVisible: =false
         Quantity: =Abs(com_PreGalleries.SelectedEntry.Quantity)
         QuantityCompleted: =Abs(com_PreGalleries.SelectedEntry.Quantity_Completed)
         QuantityNewLOT: =Abs(com_PreGalleries.SelectedEntry.Quantity_NewLOT)
