--- a/BSiNS/Src/Components/com_Modal.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal.fx.yaml
@@ -425,7 +425,7 @@ com_Modal As CanvasComponent:
                                         colLines,
                                         'Line_No.' = com_Modal.LineId
                                     ),
-                                    {Lot_No: Text(inp_LotNo.Value),Qty_Phys_Inventory: Value(inp_rezQty_2.Value)}
+                                    {Lot_No: Text(inp_LotNo.Value), Qty_Phys_Inventory: Value(inp_rezQty_2.Value)}
                                 ),
                                 If(com_Modal.IsNabavniNalog,
                                 Patch(
@@ -435,7 +435,7 @@ com_Modal As CanvasComponent:
                                         Entry_No = com_Modal.ResEntryId && Source_Ref_No = com_Modal.LineId
                                     ),
                                     {
-                                        Quantity_Completed: Value(-inp_rezQty_2.Value),
+                                        Quantity_Completed: Value(inp_rezQty_2.Value),
                                         LOT_No: Text(inp_LotNo.Value)
                                     }
                                 ),
