--- a/BSiNS/Src/scr_Entry.fx.yaml
+++ b/BSiNS/Src/scr_Entry.fx.yaml
@@ -60,7 +60,7 @@
             isLoading,
             false
         );
-        Counter = 0;
+        Set(Counter, 0);
 
     vrt_Entry As groupContainer.verticalAutoLayoutContainer:
         DropShadow: =DropShadow.Light
