--- a/BSiNS/Src/Components/com_Modal.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal.fx.yaml
@@ -244,7 +244,20 @@ com_Modal As CanvasComponent:
                             Required: =true
                             TriggerOutput: ='TextInputCanvas.TriggerOutput'.Keypress
                             Type: ="Text"
-                            ValidationState: =If(!IsNumeric(inp_rezQty_2.Value) || Value(inp_rezQty_2.Value) < 0, "Error", "None")
+                            ValidationState: |-
+                                =If(
+                                    !IsNumeric(inp_rezQty_2.Value) || Value(inp_rezQty_2.Value) < 0,
+                                    "Value_Error",
+                                    If(
+                                        !(com_Modal.IsInventura && com_Modal.IsNabavniNalog),
+                                        If(
+                                            Value(inp_rezQty_2.Value) > com_Modal.Quantity,
+                                            "Quantity_Error",
+                                            "None"
+                                        ),
+                                        "None"
+                                    )
+                                )
                             Value: |-
                                 =If(
                                     com_Modal.IsInventura,
@@ -279,7 +292,7 @@ com_Modal As CanvasComponent:
                             PaddingRight: =0
                             PaddingTop: =0
                             Size: =14
-                            Text: =If(inp_rezQty_2.ValidationState = inp_rezQty_2.ValidationState.Error, "Unesite pozitivan broj", "")
+                            Text: =If(inp_rezQty_2.ValidationState = inp_rezQty_2.ValidationState.Value_Error, "Unesite pozitivan broj", "")
                             Visible: =true
                             Width: =200
                             X: =0
