--- a/BSiNS/Src/Components/com_Galleries.fx.yaml
+++ b/BSiNS/Src/Components/com_Galleries.fx.yaml
@@ -702,12 +702,12 @@ com_Galleries As CanvasComponent:
                                 LOT_No: Blank(),
                                 Location_Code: ThisItem.Location_Code,
                                 Positive: ThisItem.Positive,
-                                'Qty-to-Handle_Base': ThisItem.'Qty-to-Handle_Base',
-                                'Qty-to-Invoice_Base': ThisItem.'Qty-to-Invoice_Base',
-                                Quantity: ThisItem.Quantity,
-                                Quantity_Base: ThisItem.Quantity_Base,
+                                'Qty-to-Handle_Base': Text(0),
+                                'Qty-to-Invoice_Base': Text(0),
+                                Quantity: Text(0),
+                                Quantity_Base: Text(0),
                                 Quantity_Completed: Blank(),
-                                Quantity_NewLOT: ThisItem.Quantity_NewLOT,
+                                Quantity_NewLOT: 0,
                                 Res_Status: ThisItem.Res_Status,
                                 Shipment_Date: ThisItem.Shipment_Date,
                                 Source_ID: ThisItem.Source_ID,
