--- a/BSiNS/Src/Components/com_Modal.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal.fx.yaml
@@ -187,6 +187,7 @@ com_Modal As CanvasComponent:
                             Required: =true
                             TriggerOutput: ='TextInputCanvas.TriggerOutput'.Keypress
                             Type: ="Text"
+                            ValidationState: =If(IsBlank(inp_LotNo.Value),"EmptyField_Error", "None")
                             Value: =com_Modal.LotNo
                             Visible: =true
                             Width: =200
