--- a/BSiNS/Src/Components/com_Modal.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal.fx.yaml
@@ -161,28 +161,7 @@ com_Modal As CanvasComponent:
                             Height: =32
                             LayoutMinHeight: =32
                             LayoutMinWidth: =320
-                            OnChange: |
-                                =/*If(
-                                    (!IsNumeric(inp_rezQty_2.Value) && !IsBlank(inp_rezQty_2.Value)) || Value(inp_rezQty_2.Value) < 0,
-                                    Notify(
-                                        "Unesite pozitivan broj.",
-                                        NotificationType.Error,
-                                        2000
-                                    );
-                                    Reset(inp_rezQty_2);
-                                    UpdateContext({potrebnaKolicina: 0}),
-                                    If(
-                                        Value(inp_rezQty_2.Value) > Abs(glr_ProResEntries.Selected.Quantity_Completed),
-                                        Reset(inp_rezQty_2);
-                                        UpdateContext({potrebnaKolicina: 0});
-                                        Notify(
-                                            "Maksimalna količina za isporuku je " & Abs(glr_ProResEntries.Selected.Quantity_Completed),
-                                            NotificationType.Information,
-                                            2000
-                                        ),
-                                        UpdateContext({potrebnaKolicina: Abs(glr_ProResEntries.Selected.Quantity) - inp_rezQty_2.Value})
-                                    )
-                                );*/
+                            OnChange: =
                             Placeholder: ="Unesite LOT"
                             Required: =true
                             TriggerOutput: ='TextInputCanvas.TriggerOutput'.Keypress
@@ -209,7 +188,7 @@ com_Modal As CanvasComponent:
                             PaddingRight: =0
                             PaddingTop: =0
                             Size: =14
-                            Text: =If(inp_rezQty_2.ValidationState = "Value_Error", "Unesite pozitivan broj", If(inp_rezQty_2.ValidationState = "Quantity_Error", "Nije moguće unijeti količinu veću od " & com_Modal.Quantity),"")
+                            Text: =If(inp_LotNo.ValidationState = "EmptyField_Error", "LOT je obavezno polje","")
                             Visible: =true
                             Width: =200
                             X: =0
@@ -254,7 +233,7 @@ com_Modal As CanvasComponent:
                             Height: =32
                             LayoutMinHeight: =32
                             LayoutMinWidth: =320
-                            OnChange: =If(inp_rezQty_2.ValidationState = "Value_Error", "Unesite pozitivan broj", If(inp_rezQty_2.ValidationState = "Quantity_Error", "Nije moguće unijeti količinu veću od " & com_Modal.Quantity),"")
+                            OnChange: =/*If(inp_rezQty_2.ValidationState = "Value_Error", "Unesite pozitivan broj", If(inp_rezQty_2.ValidationState = "Quantity_Error", "Nije moguće unijeti količinu veću od " & com_Modal.Quantity),"")*/
                             Placeholder: ="Unesite rezervisano količinu"
                             Required: =true
                             TriggerOutput: ='TextInputCanvas.TriggerOutput'.Keypress
@@ -354,7 +333,7 @@ com_Modal As CanvasComponent:
                             Height: =32
                             LayoutMinHeight: =32
                             LayoutMinWidth: =320
-                            OnChange: =If(inp_rezQty_2.ValidationState = "Value_Error", "Unesite pozitivan broj", If(inp_rezQty_2.ValidationState = "Quantity_Error", "Nije moguće unijeti količinu veću od " & com_Modal.Quantity),"")
+                            OnChange: =/*If(inp_rezQty_2.ValidationState = "Value_Error", "Unesite pozitivan broj", If(inp_rezQty_2.ValidationState = "Quantity_Error", "Nije moguće unijeti količinu veću od " & com_Modal.Quantity),"")*/
                             Placeholder: ="Unesite potrebnu količinu"
                             TriggerOutput: ='TextInputCanvas.TriggerOutput'.Keypress
                             ValidationState: |-
@@ -391,7 +370,7 @@ com_Modal As CanvasComponent:
                             PaddingRight: =0
                             PaddingTop: =0
                             Size: =14
-                            Text: =If(inp_potrebnoQty_2.ValidationState = inp_potrebnoQty_2.ValidationState.Error, "Unesite pozitivan broj", "")
+                            Text: =If(inp_potrebnoQty_2.ValidationState = "Value_Error", "Unesite pozitivan broj", If(inp_potrebnoQty_2.ValidationState = "Quantity_Error", "Nije moguće unijeti količinu veću od " & com_Modal.Quantity),"")
                             Visible: =true
                             Width: =200
                             X: =0
@@ -424,7 +403,7 @@ com_Modal As CanvasComponent:
                                 DisplayMode.Edit
                             )*/
                             If(
-                                inp_rezQty_2.ValidationState = "Value_Error" || inp_rezQty_2.ValidationState = "Quantity_Error" || inp_potrebnoQty_2.ValidationState = "Value_Error" || inp_potrebnoQty_2.ValidationState = "Quantity_Error",
+                                inp_rezQty_2.ValidationState = "Value_Error" || inp_rezQty_2.ValidationState = "Quantity_Error" || inp_potrebnoQty_2.ValidationState = "Value_Error" || inp_potrebnoQty_2.ValidationState = "Quantity_Error" || inp_LotNo.ValidationState = "EmptyField_Error",
                                 DisplayMode.Disabled,
                                 DisplayMode.Edit
                             )
